--- a/interface/src/assets/css/style.css
+++ b/interface/src/assets/css/style.css
@@ -42,6 +42,12 @@
   margin-bottom: 70vh;
 }
 
+@media only screen and (max-width: 600px) {
+  .navbar-hero {
+    height: 65vh;
+    margin-bottom: 20vh;
+  }
+}
 .hero {
   padding: 20vh 0 5.25rem 0;
   height: 110vh;
@@ -64,6 +70,22 @@
   left: 100vh;
 }
 
+@media only screen and (max-width: 600px) {
+  .hero {
+    max-height: 100vh;
+    padding: 10vh 0 5.25rem 0;
+  }
+  .hero-2 {
+    padding: 20px;
+  }
+  .hero-2 img:last-child {
+    width: 100px;
+    height: auto;
+    position: relative;
+    top: -18vh;
+    left: 28vh;
+  }
+}
 .products {
   background-image: url("../images/home_products_bg.png");
   height: 80vh;
@@ -82,6 +104,33 @@
   padding: 8vh 0 0 50px;
 }
 
+@media only screen and (max-width: 600px) {
+  .products {
+    height: 60vh;
+    text-align: center;
+  }
+  .products > div {
+    display: flex;
+    flex-direction: column !important;
+  }
+  .products-left-text {
+    height: fit-content;
+    width: 100%;
+    padding: 20px 10px;
+    border: none;
+  }
+  .products .phone-image {
+    width: 60%;
+    height: auto;
+    padding: 10px;
+  }
+  .products a {
+    text-decoration: none;
+    color: #fff;
+    padding: 10px 20px;
+    background-color: #2B547E;
+  }
+}
 .templates-home-heading {
   padding: 2.75rem 10px 0px 2.75rem;
 }
@@ -96,6 +145,10 @@
 .templates {
   height: max-content;
   margin-bottom: 12vh;
+}
+.templates a {
+  color: #2B547E;
+  text-decoration: none;
 }
 .templates .template {
   padding: 20px 0px;
@@ -181,6 +234,34 @@
   background-image: url("../images/templates_page_cta.png");
 }
 
+@media only screen and (max-width: 600px) {
+  .templates-home-heading {
+    padding: 10px;
+  }
+
+  .templates {
+    height: max-content;
+    margin-bottom: 12vh;
+  }
+  .templates > div {
+    display: flex;
+    flex-direction: column !important;
+  }
+  .templates .template {
+    padding: 20px 0px;
+    margin: 0px;
+  }
+  .templates .template img {
+    width: 100%;
+  }
+  .templates span {
+    display: block;
+    text-align: center;
+    padding-top: 5px;
+    color: #2B547E;
+    font-size: 1.25rem;
+  }
+}
 .call-to-action {
   height: 80vh;
   background-image: linear-gradient(to bottom right, #2B547E, skyblue);
@@ -214,6 +295,18 @@
   padding: 7px;
 }
 
+@media only screen and (max-width: 600px) {
+  .call-to-action {
+    display: flex;
+    flex-direction: column !important;
+  }
+  .call-to-action .text-start img {
+    width: 280px;
+    position: relative;
+    bottom: -3vh;
+    left: 22px;
+  }
+}
 .testimonies {
   min-height: 70vh;
   margin-bottom: 15vh;
@@ -248,6 +341,11 @@
   left: -30px;
 }
 
+@media only screen and (max-width: 600px) {
+  .testimonies .testimony {
+    width: 80%;
+  }
+}
 .pricing-page-body {
   min-height: 90vh;
   margin: 10vh auto 30vh;
@@ -1252,6 +1350,27 @@ h3 {
   font-size: 1.5rem;
 }
 
+@media only screen and (max-width: 600px) {
+  .cta {
+    padding: 20px 10px;
+  }
+  .cta > div {
+    display: flex;
+    flex-direction: column !important;
+  }
+  .cta img {
+    width: 100%;
+    height: auto;
+  }
+
+  .footer > div {
+    display: flex;
+    flex-direction: column !important;
+  }
+  .footer .copyright {
+    padding: 20px 10px;
+  }
+}
 .page-header {
   height: 15vh;
   padding: 1.25rem 0;
