--- a/interface/src/assets/scss/components/_calltoaction.scss
+++ b/interface/src/assets/scss/components/_calltoaction.scss
@@ -40,3 +40,17 @@
         padding: 7px;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .call-to-action {
+        display: flex;
+        flex-direction: column !important;
+
+        .text-start img {
+            width: 280px;
+            position: relative;
+            bottom: -3vh;
+            left: 22px;
+        }
+    }
+}
