--- a/interface/src/assets/scss/components/_hero.scss
+++ b/interface/src/assets/scss/components/_hero.scss
@@ -23,3 +23,22 @@
         }
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .hero {
+        max-height: 100vh;
+        padding: 10vh 0 5.25rem 0;
+
+        &-2 {
+            padding: 20px;
+
+            img:last-child {
+                width: 100px;
+                height: auto;
+                position: relative;
+                top: -18vh;
+                left: 28vh;
+            }
+        }
+    }
+}
