--- a/interface/src/assets/scss/components/_products.scss
+++ b/interface/src/assets/scss/components/_products.scss
@@ -1,3 +1,5 @@
+@use '../custom' as *;
+
 .products {
     background-image: url('../images/home_products_bg.png');
     height: 80vh;
@@ -16,5 +18,38 @@
         width: 45vh;
         height: auto;
         padding: 8vh 0 0 50px;
-    };
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .products {
+        height: 60vh;
+        text-align: center;
+
+        & > div {
+            display: flex;
+            flex-direction: column !important;
+        }
+
+        &-left-text {
+            height: fit-content;
+            width: 100%;
+            padding: 20px 10px;
+            border: none;
+        }
+
+        .phone-image {
+            width: 60%;
+            height: auto;
+            padding: 10px;
+        }
+        
+        a {
+            text-decoration: none;
+            color: #fff;
+            padding: 10px 20px;
+            background-color: $primary-dark;
+        }
+
+    }
 }
