--- a/interface/src/assets/scss/components/_testimonies.scss
+++ b/interface/src/assets/scss/components/_testimonies.scss
@@ -40,3 +40,11 @@
         }
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .testimonies {
+        .testimony {
+            width: 80%;
+        }
+    }
+}
