--- a/interface/src/assets/css/style.css
+++ b/interface/src/assets/css/style.css
@@ -1275,6 +1275,47 @@ h3 {
   height: auto;
 }
 
+@media only screen and (max-width: 600px) {
+  .create-account-page {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+  .create-account-page-left {
+    height: fit-content;
+    padding: 20px 2rem;
+  }
+  .create-account-page-left h3 {
+    padding: 3vh 0px 3vh 0px;
+  }
+  .create-account-page-left div:last-child {
+    padding-top: 7vh;
+  }
+  .create-account-page-left i {
+    font-size: 1rem;
+  }
+  .create-account-page-right {
+    padding: 20px 2rem;
+  }
+  .create-account-page-right label {
+    padding-top: 2rem;
+  }
+  .create-account-page-right input {
+    width: 100%;
+    padding: 10px 20px;
+    border: none;
+    box-shadow: 1px 2px 1px white, 3px 6px 20px rgba(0, 0, 0, 0.2);
+  }
+  .create-account-page-right .btn {
+    width: 100%;
+  }
+  .create-account-page-right i {
+    display: none;
+  }
+  .create-account-page img:first-child {
+    width: 72px;
+    height: auto;
+  }
+}
 .login-page {
   padding: 0;
   margin: 0;
@@ -1337,6 +1378,44 @@ h3 {
   height: auto;
 }
 
+@media only screen and (max-width: 600px) {
+  .login-page {
+    max-width: 100%;
+    overflow-x: hidden;
+  }
+  .login-page-left {
+    height: fit-content;
+    padding: 20px 2rem;
+  }
+  .login-page-left h3 {
+    padding: 3vh 0px 3vh 0px;
+  }
+  .login-page-left div:last-child {
+    padding-top: 7vh;
+  }
+  .login-page-left i {
+    font-size: 1rem;
+  }
+  .login-page-right {
+    padding: 20px 2rem;
+  }
+  .login-page-right input {
+    width: 100%;
+    padding: 10px 20px;
+    border: none;
+    box-shadow: 1px 2px 1px white, 3px 6px 20px rgba(0, 0, 0, 0.2);
+  }
+  .login-page-right .btn {
+    width: 100%;
+  }
+  .login-page-right i {
+    display: none;
+  }
+  .login-page img:first-child {
+    width: 72px;
+    height: auto;
+  }
+}
 .cta {
   padding: 8rem 0px 3rem 5rem;
   margin: 0;
